- Ingredient management - UI fixes

--- a/SiGotvime (Web)/SiGotvime (Web).csproj
+++ b/SiGotvime (Web)/SiGotvime (Web).csproj
@@ -201,6 +201,7 @@
     <Compile Include="Controllers\HelperController.cs" />
     <Compile Include="Controllers\HistoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\IngredientController.cs" />
     <Compile Include="Controllers\PlanController.cs" />
     <Compile Include="Controllers\RecipeController.cs" />
     <Compile Include="Controllers\StatisticController.cs" />
@@ -209,7 +210,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AdminAuthorizeAttribute.cs" />
     <Compile Include="Helpers\CaptchaFilterAttribute.cs" />
+    <Compile Include="Helpers\CompressFilterAttribute.cs" />
     <Compile Include="Helpers\HtmlHelpers.cs" />
     <Compile Include="Helpers\ImageManager.cs" />
     <Compile Include="Helpers\JsonSerializer.cs" />
@@ -217,8 +220,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\angucomplete-alt.css" />
+    <Content Include="Content\angucomplete-alt.min.css">
+      <DependentUpon>angucomplete-alt.css</DependentUpon>
+    </Content>
     <Content Include="Content\animate.css" />
+    <Content Include="Content\animate.min.css">
+      <DependentUpon>animate.css</DependentUpon>
+    </Content>
     <Content Include="Content\backTop.css" />
+    <Content Include="Content\backTop.min.css">
+      <DependentUpon>backTop.css</DependentUpon>
+    </Content>
     <Content Include="Content\banners\EkonElektron\ekonElektron.jpg" />
     <Content Include="Content\banners\EkonElektron\ekonElektron.png" />
     <Content Include="Content\banners\Pakomak\Pakomak 300x250.html" />
@@ -233,6 +245,15 @@
     <Content Include="Content\cropper\cropper.min.js" />
     <Content Include="Content\fonts\font-awesome.min.css" />
     <Content Include="Content\fonts\glyphicons\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\Icons\categoryIcons.sprite.css">
+      <DependentUpon>categoryIcons.sprite</DependentUpon>
+    </Content>
+    <Content Include="Content\Icons\categoryIcons.sprite.min.css">
+      <DependentUpon>categoryIcons.sprite.css</DependentUpon>
+    </Content>
+    <Content Include="Content\Icons\categoryIcons.sprite.png">
+      <DependentUpon>categoryIcons.sprite</DependentUpon>
+    </Content>
     <Content Include="Content\Icons\meze.png" />
     <Content Include="Content\Icons\sauce6.png" />
     <Content Include="Content\Icons\spaghetti3.png" />
@@ -248,10 +269,19 @@
     <Content Include="Content\loaders\loaders markup.html" />
     <Content Include="Content\loaders\loaders.css.min.css" />
     <Content Include="Content\remodal-default-theme.css" />
+    <Content Include="Content\remodal-default-theme.min.css">
+      <DependentUpon>remodal-default-theme.css</DependentUpon>
+    </Content>
     <Content Include="Content\remodal.css" />
+    <Content Include="Content\remodal.min.css">
+      <DependentUpon>remodal.css</DependentUpon>
+    </Content>
     <Content Include="Content\structure.css" />
     <Content Include="Content\style-rtl.css" />
     <Content Include="Content\style.css" />
+    <Content Include="Content\style.min.css">
+      <DependentUpon>style.css</DependentUpon>
+    </Content>
     <Content Include="Content\userImages\picture-Solev.jpg" />
     <Content Include="Content\Utilities\okTick.png" />
     <Content Include="favicon.ico" />
@@ -307,6 +337,10 @@
     <Content Include="Content\fonts\fontawesome-webfont.ttf" />
     <Content Include="Content\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\banners\EkonElektron\baner-si gotvime.CDR" />
+    <None Include="bundleconfig.json" />
+    <Content Include="Content\Icons\categoryIcons.sprite" />
+    <None Include="Properties\PublishProfiles\GoHost.pubxml" />
+    <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Properties\PublishProfiles\sigotvime.pubxml" />
     <Content Include="Scripts\cropper.js" />
     <Content Include="Scripts\errors.json" />
@@ -328,13 +362,22 @@
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.min.js">
+      <DependentUpon>jquery.validate.js</DependentUpon>
+    </Content>
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\loadingoverlay.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\moment.min.js" />
+    <Content Include="Scripts\MyScripts\app.js" />
+    <Content Include="Scripts\MyScripts\app.min.js">
+      <DependentUpon>app.js</DependentUpon>
+    </Content>
     <Content Include="Scripts\MyScripts\BlockUI.js" />
+    <Content Include="Scripts\MyScripts\BlockUI.min.js">
+      <DependentUpon>BlockUI.js</DependentUpon>
+    </Content>
     <Content Include="Scripts\MyScripts\GoogleAnalytics.js" />
     <Content Include="Scripts\Notify\bootstrap-notify.js" />
     <Content Include="Scripts\Notify\bootstrap-notify.min.js" />
@@ -342,17 +385,26 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\scripts.js" />
+    <Content Include="Scripts\scripts.min.js">
+      <DependentUpon>scripts.js</DependentUpon>
+    </Content>
     <Content Include="Scripts\summernote\summernote.css" />
     <Content Include="Scripts\summernote\summernote.min.js" />
     <Content Include="Scripts\Twitter\Twitter.js" />
     <Content Include="Scripts\underscore-min.js" />
     <Content Include="Scripts\validation\jquery.validationEngine.js" />
+    <Content Include="Scripts\validation\jquery.validationEngine.min.js">
+      <DependentUpon>jquery.validationEngine.js</DependentUpon>
+    </Content>
     <Content Include="Scripts\validation\languages\jquery.validationEngine-ca.js" />
     <Content Include="Scripts\validation\languages\jquery.validationEngine-cz.js" />
     <Content Include="Scripts\validation\languages\jquery.validationEngine-da.js" />
     <Content Include="Scripts\validation\languages\jquery.validationEngine-de.js" />
     <Content Include="Scripts\validation\languages\jquery.validationEngine-el.js" />
     <Content Include="Scripts\validation\languages\jquery.validationEngine-en.js" />
+    <Content Include="Scripts\validation\languages\jquery.validationEngine-en.min.js">
+      <DependentUpon>jquery.validationEngine-en.js</DependentUpon>
+    </Content>
     <Content Include="Scripts\validation\languages\jquery.validationEngine-es.js" />
     <Content Include="Scripts\validation\languages\jquery.validationEngine-et.js" />
     <Content Include="Scripts\validation\languages\jquery.validationEngine-fa.js" />
@@ -429,6 +481,10 @@
     <Content Include="Views\History\RecipesOfTheDay.cshtml" />
     <Content Include="Views\Shared\_Tweets.cshtml" />
     <Content Include="Views\Recipe\_RecipeList.cshtml" />
+    <Content Include="Views\Shared\pakomak.cshtml" />
+    <Content Include="Views\Ingredient\Index.cshtml" />
+    <Content Include="Views\Ingredient\Edit.cshtml" />
+    <Content Include="Views\Ingredient\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
