--- a/SiGotvime (Web)/Web.config
+++ b/SiGotvime (Web)/Web.config
@@ -10,9 +10,9 @@
     <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
   </configSections>
   <connectionStrings>
-    <add name="SiGotvimeDB" connectionString="Data Source=cs84bvagcq.database.windows.net,1433;Initial Catalog=SiGotvimeDB;User ID=martin;Password=Solev450045" providerName="System.Data.SqlClient" />
+    <add name="SiGotvimeDB" connectionString="Data Source=94.155.47.59;Initial Catalog=myqikmhcSiGotvimeDB;User ID=myqikmhcmsolev;Password=solevhon11" providerName="System.Data.SqlClient" />
     <add name="SiGotvimeDB_Dev" connectionString="Data Source=cs84bvagcq.database.windows.net,1433;Initial Catalog=SiGotvimeDB_Dev;User ID=martin;Password=Solev450045" providerName="System.Data.SqlClient" />
-    <add name="FoodConnection" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FoodDatabase; Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="SiGotvimeDB" connectionString="Data Source=(localdb)\mssqllocaldb; Initial Catalog=SiGotvimeDB; Integrated Security=True;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -38,7 +38,7 @@
       <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
     </httpHandlers>
 
-    <!--<customErrors mode="Off"/>-->
+    <customErrors mode="Off"/>
     
   </system.web>
   <runtime>
@@ -102,6 +102,28 @@
       -->
   </glimpse>
   <system.webServer>
+    <httpCompression directory="%SystemDrive%\websites\_compressed" minFileSizeForComp="1024">
+      <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" />
+      <dynamicTypes>
+        <add mimeType="text/*" enabled="true" />
+        <add mimeType="message/*" enabled="true" />
+        <add mimeType="application/javascript" enabled="true" />
+        <add mimeType="application/x-javascript" enabled="true" />
+        <add mimeType="application/json" enabled="true" />
+        <add mimeType="*/*" enabled="false" />
+      </dynamicTypes>
+      <staticTypes>
+        <add mimeType="text/*" enabled="true" />
+        <add mimeType="message/*" enabled="true" />
+        <add mimeType="application/javascript" enabled="true" />
+        <add mimeType="application/x-javascript" enabled="true" />
+        <add mimeType="application/json" enabled="true" />
+        <add mimeType="*/*" enabled="false" />
+      </staticTypes>
+    </httpCompression>
+    
+    <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true"/>
+    
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
@@ -113,6 +135,8 @@
     <staticContent>
       <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="30.00:00:00" />
     </staticContent>
+    
+    
     
     <!--<httpErrors errorMode="Custom" existingResponse="Replace" >
       <remove statusCode="404" />
