--- a/SiGotvime (Admin)/Web.config
+++ b/SiGotvime (Admin)/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="FoodConnection" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FoodDatabase; Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SiGotvimeDB" connectionString="Data Source=(localdb)\mssqllocaldb; Initial Catalog=SiGotvimeDB; Integrated Security=True;" providerName="System.Data.SqlClient" />
     <add name="SiGotvimeDB_Dev" connectionString="Data Source=cs84bvagcq.database.windows.net,1433;Initial Catalog=SiGotvimeDB_Dev;User ID=martin;Password=Solev450045" providerName="System.Data.SqlClient" />
-    <add name="SiGotvimeDB" connectionString="Data Source=cs84bvagcq.database.windows.net,1433;Initial Catalog=SiGotvimeDB;User ID=martin;Password=Solev450045" providerName="System.Data.SqlClient" />
+    <!--<add name="SiGotvimeDB" connectionString="Data Source=cs84bvagcq.database.windows.net,1433;Initial Catalog=SiGotvimeDB;User ID=martin;Password=Solev450045" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
