--- a/SiGotvime (Web)/packages.config
+++ b/SiGotvime (Web)/packages.config
@@ -5,6 +5,7 @@
   <package id="AntiXSS" version="4.3.0" targetFramework="net451" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net451" />
   <package id="Glimpse" version="1.8.2" targetFramework="net451" />
@@ -15,18 +16,24 @@
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="jQuery.Ajax.Unobtrusive" version="2.0.20710.0" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
-  <package id="Unity" version="3.0.1304.1" targetFramework="net451" />
-  <package id="Unity.Mvc5" version="1.1" targetFramework="net451" />
+  <package id="Unity" version="4.0.1" targetFramework="net451" />
+  <package id="Unity.Mvc5" version="1.2.3" targetFramework="net451" />
+  <package id="Unity.WebAPI" version="5.2.3" targetFramework="net451" />
   <package id="Vereyon.Web.HtmlSanitizer" version="1.1.2.0" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
